--- a/Notebooks/Exploration Exercises.ipynb
+++ b/Notebooks/Exploration Exercises.ipynb
@@ -71,6 +71,29 @@
    "source": [
     "# Questions \n",
     "\n",
+    "Explore data some more\n",
+    "* Try stop words\n",
+    "* Stemming\n",
+    "* Document Frequency\n",
+    "* Binary \n",
+    "* Etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Questions \n",
+    "\n",
     "* Do tfidf on the dataset\n",
     "* explore the high and low idf values\n",
     "* look at the most and least import words in the first review\n",
