updated preprocessing and explore exercises

--- a/Notebooks/Exploration Exercises.ipynb
+++ b/Notebooks/Exploration Exercises.ipynb
@@ -71,12 +71,14 @@
    "source": [
     "# Questions \n",
     "\n",
-    "Explore data some more\n",
-    "* Try stop words\n",
-    "* Stemming\n",
+    "Try some other things\n",
+    "* Remove stop words\n",
     "* Document Frequency\n",
     "* Binary \n",
-    "* Etc"
+    "* Use nltk to:\n",
+    "    * Stemming and Lemmitization\n",
+    "    * Parts of Speech tags\n",
+    "* Anything else you want to try"
    ]
   },
   {
