--- a/Notebooks/Preprocessing.ipynb
+++ b/Notebooks/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,7 @@
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "vectorizer = CountVectorizer(ngram_range=(2,2))\n",
+    "vectorizer = CountVectorizer()\n",
     "X = vectorizer.fit_transform(corpus)\n",
     "print(type(X))"
    ]
@@ -189,28 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[u'document', u'document one', u'document two', u'is', u'is document', u'one', u'this', u'this is', u'two']\n"
-     ]
-    }
-   ],
-   "source": [
-    "vectorizer = CountVectorizer(ngram_range=(1,2))\n",
-    "X = vectorizer.fit_transform(corpus)\n",
-    "print(vectorizer.get_feature_names())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +210,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[u'document', u'document one', u'document two', u'is', u'is document', u'one', u'this', u'this is', u'two']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = CountVectorizer(ngram_range=(1,2))\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "print(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +264,7 @@
        "       [0, 1, 1, 0, 1, 1, 1]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -343,18 +343,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import nltk.stem"
+    "import nltk.stem\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "stemmer = nltk.stem.SnowballStemmer('english')\n",
+    "lemmatizer = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -365,18 +378,204 @@
      "text": [
       "run\n",
       "run\n",
+      "running\n",
+      "run\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stemmer.stem('running'))\n",
+    "print(stemmer.stem('run'))\n",
+    "\n",
+    "print(lemmatizer.lemmatize('running'))\n",
+    "print(lemmatizer.lemmatize('run'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "go\n",
+      "go\n",
+      "going\n",
       "go\n"
      ]
     }
    ],
    "source": [
-    "stemmer = nltk.stem.SnowballStemmer('english')\n",
-    "print(stemmer.stem('running'))\n",
-    "print(stemmer.stem('run'))\n",
-    "\n",
     "print(stemmer.stem('going'))\n",
-    "print(stemmer.stem('go'))"
+    "print(stemmer.stem('go'))\n",
+    "\n",
+    "print(lemmatizer.lemmatize('going'))\n",
+    "print(lemmatizer.lemmatize('go'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NLTK Tokenizer\n",
+    "\n",
+    "Demo of different tokenizers: http://text-processing.com/demo/tokenize/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I',\n",
+       " 'was',\n",
+       " 'watching',\n",
+       " 'TV',\n",
+       " '.',\n",
+       " 'I',\n",
+       " 'liked',\n",
+       " 'it',\n",
+       " 'it',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'lot',\n",
+       " 'of',\n",
+       " 'fun']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nltk import word_tokenize\n",
+    "\n",
+    "s = \"I was watching TV. I liked it it was a lot of fun\"\n",
+    "word_tokenize(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello.', 'How are you, dear Mr. Sir?', 'Are you well?', 'Here: drink this!', 'It will make you feel better.', \"I mean, it won't make you feel worse!\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.tokenize import sent_tokenize\n",
+    "\n",
+    "text = \"\"\"Hello. How are you, dear Mr. Sir? Are you well?\n",
+    "          Here: drink this! It will make you feel better.\n",
+    "          I mean, it won't make you feel worse!\"\"\"\n",
+    "\n",
+    "sentences = sent_tokenize(text)\n",
+    "print(sentences)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part of Speech Tagging\n",
+    "\n",
+    "Part-of-speech (POS) tagging refers to the process of assigning part-of-speech tags, such as “noun” or “verb,” to words in documents.\n",
+    "\n",
+    "##### Some of POS tags: \n",
+    "WP: wh-pronoun (\"who\", \"what\")  \n",
+    "VBZ: verb, 3rd person sing. present (\"takes\")  \n",
+    "VBG: verb, gerund/present participle (\"taking\")  \n",
+    "TO: to (\"to go\", \"to him\")   \n",
+    "DT: determiner (\"the\", \"this\")  \n",
+    "NN: noun, singular or mass (\"door\")  \n",
+    ".: Punctuation (\".\", \"?\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I',\n",
+       " 'was',\n",
+       " 'watching',\n",
+       " 'TV',\n",
+       " '.',\n",
+       " 'I',\n",
+       " 'liked',\n",
+       " 'it',\n",
+       " 'it',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'lot',\n",
+       " 'of',\n",
+       " 'fun']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_tokenize(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('I', 'PRP'),\n",
+       " ('was', 'VBD'),\n",
+       " ('watching', 'VBG'),\n",
+       " ('TV', 'NN'),\n",
+       " ('.', '.'),\n",
+       " ('I', 'PRP'),\n",
+       " ('liked', 'VBD'),\n",
+       " ('it', 'PRP'),\n",
+       " ('it', 'PRP'),\n",
+       " ('was', 'VBD'),\n",
+       " ('a', 'DT'),\n",
+       " ('lot', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('fun', 'NN')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.pos_tag(word_tokenize(s))"
    ]
   },
   {
@@ -388,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -424,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -440,7 +639,7 @@
        "         0.35959372,  0.        ]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -462,7 +661,7 @@
        "[u'article', u'document', u'is', u'one', u'third', u'this', u'two']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +683,7 @@
        "array([[ 0.,  1.,  0.,  0.,  0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,6 +692,51 @@
     "# given a new document we can use the transform method to get the tfidf values\n",
     "x_new = vectorizer.transform(['another document with some new words'])\n",
     "x_new.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.69314718,  1.28768207,  1.        ,  1.69314718,  1.69314718,\n",
+       "        1.        ,  1.69314718])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer.idf_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'/Users/mike/Desktop/PythonWorkshopText/Notebooks'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
    ]
   },
   {
